--- a/RichCanvasUITests.App/MainWindow.xaml
+++ b/RichCanvasUITests.App/MainWindow.xaml
@@ -4,11 +4,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RichCanvasUITests.App"
-        xmlns:s="clr-namespace:System;assembly=mscorlib"
         xmlns:scs="clr-namespace:System.Collections.Specialized;assembly=System"
         xmlns:auto="clr-namespace:RichCanvasUITests.App.Automation"
         xmlns:models="clr-namespace:RichCanvasUITests.App.Models"
         xmlns:richCanvas="clr-namespace:RichCanvas;assembly=RichCanvas"
+        xmlns:statePresenters="clr-namespace:RichCanvasUITests.App.StatePresenters"
         mc:Ignorable="d"
         Title="MainWindow"
         Height="450"
@@ -17,10 +17,15 @@
     <Window.DataContext>
         <local:MainWindowViewModel />
     </Window.DataContext>
-
     <Window.Resources>
-        <s:Boolean x:Key="FalseValue">False</s:Boolean>
-        <s:Boolean x:Key="TrueValue">True</s:Boolean>
+        <Style TargetType="Separator">
+            <Setter Property="HorizontalAlignment"
+                    Value="Stretch" />
+            <Setter Property="Height"
+                    Value="2" />
+            <Setter Property="Margin"
+                    Value="5,5,5,5"/>
+        </Style>
     </Window.Resources>
 
     <Grid>
@@ -30,44 +35,19 @@
         </Grid.ColumnDefinitions>
 
         <StackPanel Grid.Column="1"
-                    Width="100">
-            <Button Command="{Binding AddPositionedRectangleCommand}"
-                    CommandParameter="{StaticResource FalseValue}"
-                    AutomationProperties.AutomationId="{x:Static auto:AutomationIds.AddPositionedRectangleButtonId}">
-                <Button.Content>
-                    <TextBlock TextWrapping="Wrap"
-                               TextAlignment="Center">
-                        Add positioned Rectangle
-                    </TextBlock>
-                </Button.Content>
-            </Button>
+                    Width="150">
 
-            <Button Command="{Binding AddPositionedRectangleCommand}"
-                    CommandParameter="{StaticResource TrueValue}"
-                    AutomationProperties.AutomationId="{x:Static auto:AutomationIds.AddImmutablePositionedRectangleButtonId}">
-                <Button.Content>
-                    <TextBlock TextWrapping="Wrap"
-                               TextAlignment="Center">
-                        Add immutable pos. Rectangle
-                    </TextBlock>
-                </Button.Content>
-            </Button>
+            <TextBlock Text="Drawing State Tests" />
+            <statePresenters:DrawingStateView DataContext="{Binding DrawingState}" />
+            <Separator />
 
-            <Button Command="{Binding AddDrawnRectangleCommand}"
-                    AutomationProperties.AutomationId="{x:Static auto:AutomationIds.AddDrawnRectangleButtonId}"
-                    Content="Add drawn rectangle">
-            </Button>
+            <TextBlock Text="Multiple Selection State Tests" />
+            <statePresenters:MultipleSelectionStateView DataContext="{Binding MultipleSelectionState}" />
+            <Separator />
 
-            <Button Command="{Binding AddEmptyItemCommand}"
-                    CommandParameter="{x:Type local:RichItemContainerModel}"
-                    AutomationProperties.AutomationId="{x:Static auto:AutomationIds.AddEmptyRectangleButtonId}"
-                    Content="Add empty rectangle">
-            </Button>
-
-            <Button Command="{Binding AddEmptyItemCommand}"
-                    CommandParameter="{x:Type models:Line}"
-                    AutomationProperties.AutomationId="{x:Static auto:AutomationIds.AddEmptyLineButtonId}"
-                    Content="Add Empty Line"></Button>
+            <TextBlock Text="Single Selection State Tests" />
+            <statePresenters:SingleSelectionStateView DataContext="{Binding SingleSelectionState}" />
+            <Separator />
 
             <Button Command="{Binding UpdateItemsSourceCommand}"
                     CommandParameter="{x:Static scs:NotifyCollectionChangedAction.Move}"
@@ -79,17 +59,9 @@
                     AutomationProperties.AutomationId="{x:Static auto:AutomationIds.RemoveFirstItemButtonId}"
                     Content="Remove First Item"></Button>
 
-            <Button Command="{Binding TestCommand}"
-                    Content="Test Button"></Button>
-
-            <Button Command="{Binding AddSelectableItemsCommmand}"
-                    AutomationProperties.AutomationId="{x:Static auto:AutomationIds.AddSelectableItemsButtonId}"
-                    Content="Add Selectable Items" />
-
-            <Button Command="{Binding AddSingleSelectionItemsForTest}"
-                    AutomationProperties.AutomationId="{x:Static auto:AutomationIds.AddTestSingleSelectionItemsButtonId}"
-                    Content="Add Single Selection Test Items" />
-
+            <Button Command="{Binding SwitchItemsPositionCommand}"
+                    Content="Switch Items"></Button>
+            
             <Button Command="{Binding ClearAllItemsCommand}"
                     AutomationProperties.AutomationId="{x:Static auto:AutomationIds.ClearItemsButtonId}"
                     Content="Clear all items">
@@ -131,7 +103,7 @@
 
         <richCanvas:RichItemsControl Background="AliceBlue"
                                      ItemsSource="{Binding Items}"
-                                     SelectedItem="{Binding SelectedItem}"
+                                     SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
                                      SelectedItems="{Binding SelectedItems}"
                                      RealTimeDraggingEnabled="True"
                                      RealTimeSelectionEnabled="{Binding RealTimeSelectionEnabled}"
@@ -167,7 +139,7 @@
 
                     <Setter Property="AllowScaleChangeToUpdatePosition"
                             Value="{Binding AllowScaleChangeToUpdatePosition}" />
-                    
+
                     <Style.Triggers>
                         <Trigger Property="IsSelected"
                                  Value="True">
