--- a/RichCanvasUITests.App/MainWindow.xaml
+++ b/RichCanvasUITests.App/MainWindow.xaml
@@ -24,7 +24,7 @@
             <Setter Property="Height"
                     Value="2" />
             <Setter Property="Margin"
-                    Value="5,5,5,5"/>
+                    Value="5,5,5,5" />
         </Style>
     </Window.Resources>
 
@@ -61,7 +61,7 @@
 
             <Button Command="{Binding SwitchItemsPositionCommand}"
                     Content="Switch Items"></Button>
-            
+
             <Button Command="{Binding ClearAllItemsCommand}"
                     AutomationProperties.AutomationId="{x:Static auto:AutomationIds.ClearItemsButtonId}"
                     Content="Clear all items">
@@ -108,6 +108,7 @@
                                      RealTimeDraggingEnabled="True"
                                      RealTimeSelectionEnabled="{Binding RealTimeSelectionEnabled}"
                                      CanSelectMultipleItems="{Binding CanSelectMultipleItems}"
+                                     DrawingEndedCommand="{Binding DrawingState.DrawingEndedCommand}"
                                      Name="source">
             <richCanvas:RichItemsControl.Resources>
                 <DataTemplate DataType="{x:Type local:RichItemContainerModel}">
@@ -119,6 +120,10 @@
                            X2="{Binding Width}"
                            Y2="{Binding Height}">
                     </Line>
+                </DataTemplate>
+                <DataTemplate DataType="{x:Type models:DrawingEndedRepresentation}">
+                    <TextBlock Text="DRAWING ENDED"
+                               AutomationProperties.AutomationId="{x:Static auto:AutomationIds.DrawingEndedTextBoxId}"/>
                 </DataTemplate>
             </richCanvas:RichItemsControl.Resources>
 
