Squashed commit of the following:
commit ba302456cfdb81d0d91a63ed0c9560821e3cdbfd
Author: Mircea Staicu <staicumircea21@gmail.com>
Date:   Mon Oct 28 14:25:39 2024 +0200

    Squashed commit of the following:

    commit 36e20fedefde7d11a8e2946c1f077afb7fa4ec6f
    Author: Mircea Staicu <staicumircea21@gmail.com>
    Date:   Thu Oct 24 23:10:01 2024 +0300

        Refactor autopanning implementation + handle autopanning in currently supported states + change state HandleAutoPanning signature + rename DP to reflect the default state better

    commit d411f92d05dffced7fb2a8daec45be1bf590cff9
    Author: Mircea Staicu <staicumircea21@gmail.com>
    Date:   Thu Oct 24 22:27:52 2024 +0300

        Change the ViewportLocation to be the same as Top,Left Mouse Position on Canvas + cleanup + add ViewportLocation on UI

    commit 11d8639a745e38a67348244ea9e5d26ffde57990
    Author: Mircea Staicu <staicumircea21@gmail.com>
    Date:   Thu Oct 24 22:18:35 2024 +0300

        Remove unused properties

    commit d987b551d6616a8a9f9a7bb1dcd028612c335623
    Author: Mircea Staicu <staicumircea21@gmail.com>
    Date:   Thu Oct 24 19:03:22 2024 +0300

        Fix panning to work smooth and correctly with the mouse position

commit 07703b1356974af6f66728f6286fdf8ffada9a74
Author: Mircea Staicu <staicumircea21@gmail.com>
Date:   Mon Oct 14 18:04:22 2024 +0300

    cleanup and todos added

commit 12c4f26508d0e7cd27115d6c20f22efab3058954
Author: Mircea Staicu <staicumircea21@gmail.com>
Date:   Mon Sep 23 23:59:35 2024 +0300

    Add UI Automation tests for DraggingState

commit 87a2201450bb95aaf2273f21a2c1618b20b18af0
Author: Mircea Staicu <staicumircea21@gmail.com>
Date:   Sun Sep 22 20:29:30 2024 +0300

    Handle dragging strategy picking and usage inside DraggingContainerState instead of RichItemsControl + invoke event after all processing has been done.

--- a/RichCanvasUITests.App/MainWindow.xaml
+++ b/RichCanvasUITests.App/MainWindow.xaml
@@ -81,6 +81,11 @@
                                   IsChecked="{Binding CanSelectMultipleItems, Mode=TwoWay}"
                                   Content="CanSelectMultipleItems">
                     </ToggleButton>
+
+                    <ToggleButton AutomationProperties.AutomationId="{x:Static auto:AutomationIds.RealTimeDraggingToggleButtonId}"
+                                  IsChecked="{Binding RealTimeDraggingEnabled, Mode=TwoWay}"
+                                  Content="RealTimeDragging">
+                    </ToggleButton>
                 </StackPanel>
             </Border>
 
@@ -99,15 +104,16 @@
             <TextBlock Text="{Binding MousePosition, ElementName=source, StringFormat='\{0\} mouse position'}"></TextBlock>
             <TextBlock Text="{Binding ItemsSource.Count, ElementName=source, StringFormat='\{0\} items'}"></TextBlock>
             <TextBlock Text="{Binding SelectedItems.Count, ElementName=source, StringFormat='\{0\} selected items'}"></TextBlock>
+            <TextBlock Text="{Binding ViewportLocation, ElementName=source, StringFormat='\{0\} viewport location'}"></TextBlock>
         </StackPanel>
 
         <richCanvas:RichItemsControl Background="AliceBlue"
                                      ItemsSource="{Binding Items}"
                                      SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
                                      SelectedItems="{Binding SelectedItems}"
-                                     RealTimeDraggingEnabled="True"
                                      RealTimeSelectionEnabled="{Binding RealTimeSelectionEnabled}"
                                      CanSelectMultipleItems="{Binding CanSelectMultipleItems}"
+                                     RealTimeDraggingEnabled="{Binding RealTimeDraggingEnabled}"
                                      DrawingEndedCommand="{Binding DrawingState.DrawingEndedCommand}"
                                      Name="source">
             <richCanvas:RichItemsControl.Resources>
@@ -123,7 +129,7 @@
                 </DataTemplate>
                 <DataTemplate DataType="{x:Type models:DrawingEndedRepresentation}">
                     <TextBlock Text="DRAWING ENDED"
-                               AutomationProperties.AutomationId="{x:Static auto:AutomationIds.DrawingEndedTextBoxId}"/>
+                               AutomationProperties.AutomationId="{x:Static auto:AutomationIds.DrawingEndedTextBoxId}" />
                 </DataTemplate>
             </richCanvas:RichItemsControl.Resources>
 
