Make Extent property on RichCanvas a Dependency Property. Create ItemExtent DP on RichItemsControl and get the Extent value through binding. Whenever ItemExtent changes update the scrollbars.

--- a/RichCanvas/Styles/RichItemsControlStyle.xaml
+++ b/RichCanvas/Styles/RichItemsControlStyle.xaml
@@ -52,7 +52,8 @@
                                 x:Name="containerDrawing">
 
                             <local:RichCanvas x:Name="PART_Panel"
-                                              IsItemsHost="True" />
+                                              IsItemsHost="True"
+                                              Extent="{Binding ItemsExtent, Mode=OneWayToSource, RelativeSource={RelativeSource TemplatedParent}}" />
 
                             <Rectangle x:Name="PART_SelectionRectangle"
                                        Visibility="{TemplateBinding IsSelecting, Converter={StaticResource BoolToVisConverter}}"
